# gmra-calculator

./: .gitignore  README.md  deploy.sh  docker-compose.yml
.github/workflows/: terraform.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: router.py
backend/app/api/endpoints/: __init__.py  health.py  jobs.py  payment.py  providers.py  report_a1.py  report_t0.py  report_t1.py  report_t2.py  report_t3.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  slides.py
backend/app/api/v2/: router.py
backend/app/api/v2/endpoints/: report.py
backend/app/api/v3/: router.py
backend/app/api/v3/endpoints/: payment.py
backend/app/core/: auth.py  config.py  logging.py  rate_limit.py  types.py
backend/app/db/: session.py
backend/app/schemas/: address_report_request.py  payment.py  provider_request.py  report_requests.py  slides.py  t2_report_request.py
backend/app/services/: __init__.py  _report_generator_a1_archived.py  alphasophia.py  bedrock_llm.py  census.py  cpt.py  ecs_worker.py  email.py  fee_schedule.py  geocoder.py  geocoding.py  google_maps.py  html_imputers.py  job_store.py  mapbox.py  mapper.py  payment.py  pdf.py  plots.py  ppt.py  queue.py  report_generator.py  s3.py  screenshotter.py  specialty.py  t0_report_generator.py  t1_report_generator.py
backend/app/services/html_imputers/: baseline_imputer.py  v2_imputer.py  v3_imputer.py
backend/app/types/: alphasophia.py  baseline_report_template.py  common_provider_siteofcare.py  cpt.py  google_maps.py
backend/app/utils/: common.py  specialty.py  validator.py
backend/docs/: ARCHITECTURE.md  CHANGELOG.md  MODULES.md  postman-testing-guide.md  wix-integration-guide.md
backend/resources/lookups/: CPT_lookup.csv  GPCI2026.csv  PPRRvu2026_Jan_QPP.csv  PPRRvu2026_Jan_nonQPP.csv  Specialty Master Sheet.xlsx  anchor_cpt_lookup.json  cpt_list.xlsx  specialty_lookup.json  specialty_map.json  zip_centroids.csv
backend/resources/templates/: MREC_Report_TEMPLATE.html  MREC_Report_TEMPLATE_A1.html  MREC_Report_TEMPLATE_T0.html  MREC_Report_TEMPLATE_T1.html  MREC_Report_TEMPLATE_V1.html  MREC_Report_TEMPLATE_V2.html  MREC_Report_TEMPLATE_V3.html  custom_T4.html  market_gap_analysis_master_slide.pptx
backend/scripts/: test_alphasophia_rate.py
backend/tests/: test_active_locum_split.py  test_alphasophia.py  test_api_jobs.py  test_api_payment.py  test_api_specialties.py  test_auth.py  test_auth_integration.py  test_common_utils.py  test_config.py  test_cpt_parsing.py  test_debug_artifacts.py  test_ecs_worker.py  test_email_service.py  test_fee_schedule.py  test_geocoder_mapbox.py  test_geocoding_distance.py  test_google_maps_helpers.py  test_health.py  test_job_store.py  test_locum_classification.py  test_no_prints.py  test_payment_service.py  test_queue.py  test_rate_limit.py  test_rate_limit_endpoints.py  test_raw_report_input.py  test_s3_uploads.py  test_site_of_care_aggregation.py  test_specialty_lookups.py  test_types_imports.py  test_validator.py  test_worker_idle.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: report-preview.html
frontend/src/: App.tsx  index.css
frontend/src/assets/: MREC_Report_TEMPLATE_T1.html
frontend/src/components/buy/: ConfirmationScreen.tsx  FormField.tsx  GeneratingScreen.tsx  OrderSidebar.tsx  ProviderList.tsx  SpecialtyCombobox.tsx  StepAddress.tsx  StepAddressWithCpt.tsx  StepConfirm.tsx  StepContact.tsx  StepIndicator.tsx  StepLocation.tsx  StepPayment.tsx  StepSpecialty.tsx  StepT4Request.tsx  TierSelection.tsx
frontend/src/components/home/: AboutGlobe.tsx  BottomCTA.tsx  CalculatorVsGlobe.tsx  CtaSection.tsx  Deliverables.tsx  FaqSection.tsx  FounderQuote.tsx  Hero.tsx  TrustBadges.tsx  (+7 more)
frontend/src/hooks/: useProviderSearch.ts  useReportGeneration.ts  useSpecialties.ts
frontend/src/lib/: api.ts  pricing.ts
frontend/src/pages/: Buy.tsx  Home.tsx  Status.tsx
frontend/src/types/: api.ts
infra/: .gitignore  acm.tf  alb.tf  backend.hcl.example  deploy.sh  dynamodb.tf  ecr.tf  ecs.tf  iam.tf  logs.tf  mailgun.tf  main.tf  outputs.tf  route53.tf  s3.tf  secrets.tf  security_groups.tf  sqs.tf  terraform.tfvars.example  variables.tf  vpc.tf
infra/bootstrap/: main.tf
localstack-init/: init.sh
(+6 files in other folders)
