[project]
name = "fastapi-professional-template"
version = "0.1.0"
description = "Production-ready FastAPI backend template"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic[email]>=2.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "slowapi>=0.1.9",
  "sqlalchemy[asyncio]>=2.0.41,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "pandas>=3.0.1",
  "python-pptx>=1.0.2",
  "openpyxl>=3.1.5",
  "xlsxwriter>=3.2.9",
  "geopy>=2.4.1",
  "tqdm>=4.67.3",
  "pre-commit>=4.5.1",
  "types-requests>=2.32.4.20260107",
  "opencage>=3.3.0",
  "folium>=0.20.0",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "selenium>=4.41.0",
  "webdriver-manager>=4.0.2",
  "ipykernel>=7.2.0",
  "boto3>=1.39.9",
  "weasyprint>=62.0",
  "langchain>=0.3.26",
  "langchain-aws>=0.2.28",
  "langchain-core>=0.3.0",
  "botocore[crt]>=1.42.63",
  "tenacity>=9.1.4",
  "vulture>=2.15",
  "resend>=2.23.0",
  "stripe>=11.0.0,<13.0.0",
  "ulid>=1.1",
  "requests>=2.32.5",
  "shapely>=2.1.2",
  "pillow>=12.1.1",
  "loguru>=0.7.3",
  "polyline>=2.0.4",
  "playwright>=1.44.0",
  "geopandas>=1.1.3",
  "contextily>=1.7.0",
  "pygris>=0.2.1",
  "aiolimiter>=1.2.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ARG"]
ignore = ["B008", "N815"]

[tool.mypy]
python_version = "3.11"
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = false  # relaxed for legacy code; tighten per-module via overrides
ignore_missing_imports = true  # third-party libs without stubs (boto3, pandas, etc.)
plugins = []

[[tool.mypy.overrides]]
module = "app.core.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.schemas.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.api.endpoints.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
